--- a/ports/vex/LinuxVST/Makefile
+++ b/ports/vex/LinuxVST/Makefile
@@ -15,7 +15,7 @@ all: Vex
 
 Makefile: premake.lua
 	@echo ==== Regenerating Makefiles ====
-	@premake --file $^ --os linux --cc gcc --target gnu
+	@premake --file $^ --os linux --target gnu --cc gcc
 
 Vex:
 	@echo ==== Building Vex ====
