--- a/ports/Makefile
+++ b/ports/Makefile
@@ -23,7 +23,7 @@ standalone:
 	$(MAKE) -C tal-reverb-2-juce/Standalone
 	$(MAKE) -C tal-reverb-3-juce/Standalone
 	$(MAKE) -C tal-vocoder-2-juce/Standalone
-# 	$(MAKE) -C vex/Standalone
+	$(MAKE) -C wolpertinger/Standalone
 
 lv2:
 # 	$(MAKE) -C arctican-function/LV2
@@ -36,7 +36,7 @@ lv2:
 # 	$(MAKE) -C tal-reverb-2-juce/LV2
 # 	$(MAKE) -C tal-reverb-3-juce/LV2
 # 	$(MAKE) -C tal-vocoder-2-juce/LV2
-# 	$(MAKE) -C vex/LV2
+#	$(MAKE) -C wolpertinger/LV2
 
 vst:
 	$(MAKE) -C arctican-function/VST
@@ -49,12 +49,13 @@ vst:
 	$(MAKE) -C tal-reverb-2-juce/VST
 	$(MAKE) -C tal-reverb-3-juce/VST
 	$(MAKE) -C tal-vocoder-2-juce/VST
-# 	$(MAKE) -C vex/VST
+	$(MAKE) -C wolpertinger/VST
 
 clean:
 	# Standalones
 	$(MAKE) clean -C arctican-function/Standalone
 	$(MAKE) clean -C arctican-pilgrim/Standalone
+	$(MAKE) clean -C hybridreverb2/Standalone
 	$(MAKE) clean -C tal-dub-3-juce/Standalone
 	$(MAKE) clean -C tal-filter-juce/Standalone
 	$(MAKE) clean -C tal-filter-2-juce/Standalone
@@ -63,11 +64,12 @@ clean:
 	$(MAKE) clean -C tal-reverb-2-juce/Standalone
 	$(MAKE) clean -C tal-reverb-3-juce/Standalone
 	$(MAKE) clean -C tal-vocoder-2-juce/Standalone
-# 	$(MAKE) clean -C vex/Standalone
+	$(MAKE) clean -C wolpertinger/Standalone
 
 	# LV2
 # 	$(MAKE) clean -C arctican-function/LV2
 # 	$(MAKE) clean -C arctican-pilgrim/LV2
+#	$(MAKE) clean -C hybridreverb2/LV2
 # 	$(MAKE) clean -C tal-dub-3-juce/LV2
 # 	$(MAKE) clean -C tal-filter-juce/LV2
 # 	$(MAKE) clean -C tal-filter-2-juce/LV2
@@ -76,11 +78,12 @@ clean:
 # 	$(MAKE) clean -C tal-reverb-2-juce/LV2
 # 	$(MAKE) clean -C tal-reverb-3-juce/LV2
 # 	$(MAKE) clean -C tal-vocoder-2-juce/LV2
-# 	$(MAKE) clean -C vex/LV2
+# 	$(MAKE) clean -C wolpertinger/LV2
 
 	# VST
 	$(MAKE) clean -C arctican-function/VST
 	$(MAKE) clean -C arctican-pilgrim/VST
+	$(MAKE) clean -C hybridreverb2/VST
 	$(MAKE) clean -C tal-dub-3-juce/VST
 	$(MAKE) clean -C tal-filter-juce/VST
 	$(MAKE) clean -C tal-filter-2-juce/VST
@@ -89,4 +92,4 @@ clean:
 	$(MAKE) clean -C tal-reverb-2-juce/VST
 	$(MAKE) clean -C tal-reverb-3-juce/VST
 	$(MAKE) clean -C tal-vocoder-2-juce/VST
-# 	$(MAKE) clean -C vex/VST
+	$(MAKE) clean -C wolpertinger/VST
