Rework Makefiles for JUCE and VSTs

--- a/ports/wolpertinger/VST/Makefile
+++ b/ports/wolpertinger/VST/Makefile
@@ -15,7 +15,7 @@ all: Wolpertinger
 
 Makefile: premake.lua
 	@echo ==== Regenerating Makefiles ====
-	@premake --file $^ --os linux --cc gcc --target gnu
+	@premake --file $^ --os linux --target gnu --cc gcc
 
 Wolpertinger:
 	@echo ==== Building Wolpertinger ====
