--- a/ports/tal-dub-3-juce/LV2/Makefile
+++ b/ports/tal-dub-3-juce/LV2/Makefile
@@ -9,17 +9,17 @@ endif
 
 export CONFIG
 
-.PHONY: all clean TAL-Dub-3.lv2/TAL-Dub-3
+.PHONY: all clean TAL-Dub-3.lv2/TAL_Dub_III_Plugin
 
-all: TAL-Dub-3.lv2/TAL-Dub-3
+all: TAL-Dub-3.lv2/TAL_Dub_III_Plugin
 
 Makefile: premake.lua
 	@echo ==== Regenerating Makefiles ====
 	@premake --file $^ --os linux --target gnu --cc gcc
 
-TAL-Dub-3.lv2/TAL-Dub-3:
-	@echo ==== Building TAL-Dub-3.lv2/TAL-Dub-3 ====
-	@$(MAKE) --no-print-directory -C . -f TAL-Dub-3.lv2/TAL-Dub-3.make
+TAL-Dub-3.lv2/TAL_Dub_III_Plugin:
+	@echo ==== Building TAL-Dub-3.lv2/TAL_Dub_III_Plugin ====
+	@$(MAKE) --no-print-directory -C . -f TAL-Dub-3.lv2/TAL_Dub_III_Plugin.make
 
 clean:
-	@$(MAKE) --no-print-directory -C . -f TAL-Dub-3.lv2/TAL-Dub-3.make clean
+	@$(MAKE) --no-print-directory -C . -f TAL-Dub-3.lv2/TAL_Dub_III_Plugin.make clean
