--- a/.gitignore
+++ b/.gitignore
@@ -15,10 +15,5 @@ debian
 intermediate
 juce_lv2_ttl_generator
 
-sdks/vstsdk2.4/artwork
-sdks/vstsdk2.4/bin
-sdks/vstsdk2.4/doc
-sdks/vstsdk2.4/pluginterfaces
-sdks/vstsdk2.4/public.sdk
-sdks/vstsdk2.4/vstgui.sf
-sdks/vstsdk2.4/index.html
+sdks/ASIOSDK2/*
+sdks/vstsdk2.4/*
