Import Juce Linux Window fixes; Update makefiles

--- a/libs/juce-153/standalone/Makefile
+++ b/libs/juce-153/standalone/Makefile
@@ -15,7 +15,7 @@ all: juce-standalone-153
 
 Makefile: premake.lua
 	@echo ==== Regenerating Makefiles ====
-	@premake --file $^ --os macosx --target gnu
+	@premake --file $^ --os linux --target gnu --cc gcc
 
 juce-standalone-153:
 	@echo ==== Building juce-standalone-153 ====
