--- a/ports/tal-vocoder-2-juce/LV2/Makefile
+++ b/ports/tal-vocoder-2-juce/LV2/Makefile
@@ -9,17 +9,17 @@ endif
 
 export CONFIG
 
-.PHONY: all clean TAL-Plugins.lv2/TAL_Vocoder_II_Plugin
+.PHONY: all clean TAL-Vocoder-II.lv2/TAL_Vocoder_II_Plugin
 
-all: TAL-Plugins.lv2/TAL_Vocoder_II_Plugin
+all: TAL-Vocoder-II.lv2/TAL_Vocoder_II_Plugin
 
 Makefile: premake.lua
 	@echo ==== Regenerating Makefiles ====
 	@premake --file $^ --os linux --target gnu --cc gcc
 
-TAL-Plugins.lv2/TAL_Vocoder_II_Plugin:
-	@echo ==== Building TAL-Plugins.lv2/TAL_Vocoder_II_Plugin ====
-	@$(MAKE) --no-print-directory -C . -f TAL-Plugins.lv2/TAL_Vocoder_II_Plugin.make
+TAL-Vocoder-II.lv2/TAL_Vocoder_II_Plugin:
+	@echo ==== Building TAL-Vocoder-II.lv2/TAL_Vocoder_II_Plugin ====
+	@$(MAKE) --no-print-directory -C . -f TAL-Vocoder-II.lv2/TAL_Vocoder_II_Plugin.make
 
 clean:
-	@$(MAKE) --no-print-directory -C . -f TAL-Plugins.lv2/TAL_Vocoder_II_Plugin.make clean
+	@$(MAKE) --no-print-directory -C . -f TAL-Vocoder-II.lv2/TAL_Vocoder_II_Plugin.make clean
