--- a/ports/Makefile
+++ b/ports/Makefile
@@ -23,6 +23,7 @@ standalone: libs_standalone
 	$(MAKE) -C arctican-pilgrim/Standalone
 	$(MAKE) -C argotlunar/Standalone
 	$(MAKE) -C hybridreverb2/Standalone
+	$(MAKE) -C juce-demo-plugin/Standalone
 	$(MAKE) -C juce_pitcher/Standalone
 	$(MAKE) -C midilfo/Standalone
 	$(MAKE) -C sDelay/Standalone
@@ -43,6 +44,7 @@ lv2: libs_plugin libs_lv2
 	$(MAKE) -C argotlunar/LV2
 	$(MAKE) -C hybridreverb2/LV2
 	$(MAKE) -C sDelay/LV2
+	$(MAKE) -C juce-demo-plugin/LV2
 	$(MAKE) -C juce_pitcher/LV2
 	$(MAKE) -C tal-dub-3-juce/LV2
 	$(MAKE) -C tal-filter-juce/LV2
@@ -60,6 +62,7 @@ vst: libs_plugin
 	$(MAKE) -C arctican-pilgrim/VST
 	$(MAKE) -C argotlunar/VST
 	$(MAKE) -C hybridreverb2/VST
+	$(MAKE) -C juce-demo-plugin/VST
 	$(MAKE) -C juce_pitcher/VST
 	$(MAKE) -C sDelay/VST
 	$(MAKE) -C sorollet/VST
@@ -80,6 +83,7 @@ clean:
 	$(MAKE) clean -C arctican-pilgrim/Standalone
 	$(MAKE) clean -C argotlunar/Standalone
 	$(MAKE) clean -C hybridreverb2/Standalone
+	$(MAKE) clean -C juce-demo-plugin/Standalone
 	$(MAKE) clean -C juce_pitcher/Standalone
 	$(MAKE) clean -C midilfo/Standalone
 	$(MAKE) clean -C sDelay/Standalone
@@ -98,6 +102,7 @@ clean:
 	$(MAKE) clean -C arctican-pilgrim/LV2
 	$(MAKE) clean -C argotlunar/LV2
 	$(MAKE) clean -C hybridreverb2/LV2
+	$(MAKE) clean -C juce-demo-plugin/LV2
 	$(MAKE) clean -C juce_pitcher/LV2
 	$(MAKE) clean -C sDelay/LV2
 	$(MAKE) clean -C tal-dub-3-juce/LV2
@@ -115,6 +120,7 @@ clean:
 	$(MAKE) clean -C arctican-pilgrim/VST
 	$(MAKE) clean -C argotlunar/VST
 	$(MAKE) clean -C hybridreverb2/VST
+	$(MAKE) clean -C juce-demo-plugin/VST
 	$(MAKE) clean -C juce_pitcher/VST
 	$(MAKE) clean -C sDelay/VST
 	$(MAKE) clean -C sorollet/VST
