--- a/plugins/Makefile
+++ b/plugins/Makefile
@@ -3,17 +3,22 @@
 all: build
 
 
-build: libs standalone lv2 vst
+build: libs standalone standalone_vst lv2 lv2_vst vst
 
 
-libs: libs_standalone libs_plugin libs_lv2
+libs: libs_standalone libs_standalone_vst libs_plugin libs_plugin_vst libs_lv2
 
 libs_standalone:
 	$(MAKE) -C ../libs/juce-153/standalone
+
+libs_standalone_vst:
 	$(MAKE) -C ../libs/juce-153/standalone-vst
 
 libs_plugin:
 	$(MAKE) -C ../libs/juce-153/plugin
+
+libs_plugin_vst:
+	$(MAKE) -C ../libs/juce-153/plugin-vst
 
 libs_lv2:
 	$(MAKE) -C ../libs/juce-lv2
@@ -22,12 +27,16 @@ libs_lv2:
 standalone: libs_standalone
 	$(MAKE) -C 3BandEQ/Standalone
 
+standalone_vst: libs_standalone_vst
+	# None
 
 lv2: libs_plugin libs_lv2
 	$(MAKE) -C 3BandEQ/LV2
 
+lv2_vst: libs_plugin_vst libs_lv2
+	# None
 
-vst: libs_plugin
+vst: libs_plugin libs_plugin_vst
 	$(MAKE) -C 3BandEQ/VST
 
 
