Fix plugins to build with the new changes in repo

--- a/plugins/Makefile
+++ b/plugins/Makefile
@@ -10,7 +10,7 @@ plugins: standalone lv2 vst
 
 libs:
 	$(MAKE) -C ../libs/juce-2.0
-	$(MAKE) -C ../libs/juce-lv2
+	$(MAKE) -C ../libs/lv2-ttl-generator
 
 standalone:
 	$(MAKE) -C 3BandEQ/Standalone
